<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context="com.example.nameapp.addNewPersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/addNameText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:text="@string/addNameText"
            />

        <EditText
            android:id="@+id/edit_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addPictureText"
            android:layout_width="150dp"
            android:paddingTop="15dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:text="@string/addPictureText"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_gallery"
            android:onClick="browsePhotoGallery" />



    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_Person_to_App"
        android:onClick="addPersonToApp" />




</LinearLayout>
