<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.nameapp.MainMenu">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/name_list"
        android:layout_gravity="center_horizontal"
        android:onClick="openNameList" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:layout_gravity="center_horizontal"
        android:onClick="openGallery" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/learningmode"
        android:layout_gravity="center_horizontal"
        android:onClick="openLearningMode" />


</LinearLayout>
